# samples

./: README.md
affiliate/be-affiliate/: Dockerfile  devstart.sh  main.py  productstart.sh  requirements.txt  startup.sh
affiliate/be-affiliate/auth/: auth.py  auth_af_user.py  auth_shop.py  models.py  routes.py
affiliate/be-affiliate/errors/: exceptions.py  middleware.py
affiliate/be-affiliate/handle_db/: af_user_db.py  databases.py  reserve_db.py  shop_db.py
affiliate/be-affiliate/models/: models.py
affiliate/be-affiliate/mysql/: Dockerfile  run.sh
affiliate/be-affiliate/notification/: send_notify.py  token.py
affiliate/be-affiliate/rooting/: af_user.py  reserve.py  shop.py
affiliate/be-affiliate/schemas/: af_user.py  common.py  reserve.py  shop.py
affiliate/fe-affiliate/: .env.production  package.json
cam-system-admin/be-cam-admin/: .env  hash_password.py  pyproject.toml  requirements.txt  startserver.sh
cam-system-admin/be-cam-admin/src/: auth.py  janus_client.py  main.py
cam-system-admin/fe-cam-admin/: .eslintrc.js  package.json
cam-v1/camera_app/: next.config.mjs  package.json  tailwind.config.js
cam-v1/camera_backend/: docker-compose-dev.yml  docker-compose.yml  turnserver.conf
cam-v1/camera_backend/auth-api/: Dockerfile  pyproject.toml
cam-v1/camera_backend/auth-api/src/: .env  main.py  models.py  rooting.py  schemas.py
cam-v1/camera_backend/auth-api/src/auth/: auth.py
cam-v1/camera_backend/auth-api/src/handle_db/: camera_db.py  databases.py
cam-v1/camera_recorder/docker/api/: Dockerfile  pyproject.toml
cam-v1/camera_recorder/docker/api/src/: main.py  rooting.py  schemas.py
cam-v1/camera_recorder/docker/api/src/auth/: auth.py  token.py
cam-v1/camera_recorder/docker/api/src/functions/: record.py
drone_arduino/main/: main.ino
drone_arduino/transmitter/: InputCmd.cpp  InputCmd.h  Transmit.cpp  transmitter.ino
growth_diary/: .prettierrc.js  App.tsx  app.json  package.json  tsconfig.json
(+162 files in other folders)
